[gd_scene load_steps=4 format=3 uid="uid://drggxaxtuv255"]

[ext_resource type="Script" path="res://scripts/order_queue_item.gd" id="1_xk3uy"]
[ext_resource type="Script" path="res://scripts/circle_percent_renderer.gd" id="2_gygf1"]

[sub_resource type="Theme" id="Theme_yl7jh"]

[node name="OrderQueueItem" type="Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("1_xk3uy")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActionLabel" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_yl7jh")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true

[node name="StateIcon" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Clock" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("2_gygf1")
